<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_pic"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/home_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                app:layout_constraintTop_toBottomOf="@id/user_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingBottom="64dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text_video"
                    style="@style/baseText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/register_name_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/main_form"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    />

                <TextView
                    android:id="@+id/text_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    style="@style/baseText"
                    />

                <EditText
                    android:id="@+id/register_email_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/main_form"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    />

                <TextView
                    android:id="@+id/register_address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    style="@style/baseText"
                    />

                <EditText
                    android:id="@+id/register_address_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:background="@drawable/main_form"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    />

                <TextView
                    android:id="@+id/register_phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    style="@style/baseText"
                    />

                <EditText
                    android:id="@+id/register_phone_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:background="@drawable/main_form"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    />

                <TextView
                    android:id="@+id/register_city_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    style="@style/baseText"
                    />

                <Spinner
                    android:clickable="true"
                    android:id="@+id/register_city_form"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:background="@drawable/main_form"
                    android:inputType="textPersonName"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/register_company_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    style="@style/baseText"
                    />

                <EditText
                    android:id="@+id/register_company_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/main_form"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    style="@style/baseText"
                    />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView7"
                    app:passwordToggleEnabled="true" >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_password_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:background="@drawable/main_form"
                        android:padding="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/retypePassword"
                    style="@style/baseText"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_retype_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView8"
                    app:passwordToggleEnabled="true" >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_retype_password_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:background="@drawable/main_form"
                        android:padding="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ubuntu_medium
"
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Register" />

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>