<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.EditProfileFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/component_header"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:paddingBottom="50dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/user_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/changeProfileBtn"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    android:text="Change Picture"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/user_pic"
                    app:layout_constraintStart_toStartOf="@id/user_pic"
                    app:layout_constraintTop_toBottomOf="@id/user_pic"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:orientation="vertical"
                    android:paddingBottom="64dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    app:layout_constraintTop_toBottomOf="@id/changeProfileBtn">

                    <TextView
                        android:id="@+id/text_video"
                        style="@style/baseText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/edit_profile_name_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/main_form"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/text_email"
                        style="@style/baseText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/edit_profile_email_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/main_form"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/edit_profile_address_text"
                        style="@style/baseText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address" />

                    <EditText
                        android:id="@+id/edit_profile_address_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/main_form"
                        android:ems="10"
                        android:inputType="textPostalAddress"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/edit_profile_phone_text"
                        style="@style/baseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone" />

                    <EditText
                        android:id="@+id/edit_profile_phone_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/main_form"
                        android:ems="10"
                        android:inputType="phone"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/edit_profile_city_text"
                        style="@style/baseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/city" />

                    <Spinner
                        android:clickable="true"
                        android:id="@+id/edit_profile_city_form"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:ems="10"
                        android:background="@drawable/main_form"
                        android:inputType="textPersonName"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:focusable="true" />


                    <TextView
                        android:id="@+id/edit_profile_company_text"
                        style="@style/baseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/company" />

                    <EditText
                        android:id="@+id/edit_profile_company_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/main_form"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:padding="10dp" />


                    <Button
                        android:id="@+id/edit_profile_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="@font/ubuntu_medium"
                        android:text="Edit Profile"
                        android:textColor="@color/white" />

                </LinearLayout>


            </android.support.constraint.ConstraintLayout>

        </ScrollView>


    </android.support.constraint.ConstraintLayout>

</FrameLayout>